# smart-light-controller

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  pages.yml
config.example/: automations.json  cloud.json  devices.json  scenes.json
src/smart_lights/: __init__.py  api.py  automation.py  bulbs.py  cli.py  colours.py  config.py  models.py  registry.py  scenes.py  service.py  transitions.py  tuya_client.py
src/smart_lights/static/: index.html
tests/: conftest.py  test_api.py  test_colours.py  test_config.py  test_registry.py  test_scenes.py  test_service.py  test_transitions.py
tests/fixtures/: automations.json  cloud.json  devices.json  scenes.json
