[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-light-controller"
version = "1.0.0"
description = "Local-first CLI and library for controlling Tuya RGBCW smart bulbs over the LAN."
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "Nico" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Home Automation",
]
dependencies = [
  "tinytuya>=1.17",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
smart-lights = "smart_lights.cli:main"

[project.urls]
Repository = "https://github.com/dr-nico-f/smart-light-controller"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
